unpackaged/main/default/objects/Brightcove_Account__c/Brightcove_Account__c.object-meta.xml
<CustomObject>
    <label>Brightcove Account</label>
    <nameField>
        <displayFormat>BC-{000000}</displayFormat>
        <label>Brightcove Account Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brightcove Account</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>