unpackaged/main/default/objects/Brightcove_Account__c/fields/Account_Edition__c.field-meta.xml
<CustomField>
    <fullName>Account_Edition__c</fullName>
    <label>Account Edition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ENTERPRISE</fullName>
            </value>
            <value>
                <fullName>PRO</fullName>
            </value>
            <value>
                <fullName>BASIC</fullName>
            </value>
            <value>
                <fullName>EXPRESS_500</fullName>
            </value>
            <value>
                <fullName>EXPRESS_200</fullName>
            </value>
            <value>
                <fullName>EXPRESS_100</fullName>
            </value>
            <value>
                <fullName>EXPRESS_PROMO_39</fullName>
            </value>
            <value>
                <fullName>EXPRESS_PROMO_29</fullName>
            </value>
            <value>
                <fullName>EXPRESS_PROMO_5</fullName>
            </value>
            <value>
                <fullName>Express Retention $199 Conversion</fullName>
            </value>
            <value>
                <fullName>Express Retention $99 Conversion</fullName>
            </value>
            <value>
                <fullName>CORE</fullName>
            </value>
            <value>
                <fullName>PRO_I</fullName>
            </value>
            <value>
                <fullName>PRO_II</fullName>
            </value>
            <value>
                <fullName>PRO_III</fullName>
            </value>
            <value>
                <fullName>Pay-As-You-Go</fullName>
            </value>
            <value>
                <fullName>Launch</fullName>
            </value>
            <value>
                <fullName>Traction</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Once</fullName>
            </value>
            <value>
                <fullName>Perform - Standard</fullName>
            </value>
            <value>
                <fullName>VMS_Starter_1_Monthly</fullName>
            </value>
            <value>
                <fullName>VMS_Starter_1_Annual</fullName>
            </value>
            <value>
                <fullName>VMS_Starter_2_Monthly</fullName>
            </value>
            <value>
                <fullName>VMS_Starter_2_Annual</fullName>
            </value>
            <value>
                <fullName>EVS_Sales_Starter_1_Monthly</fullName>
            </value>
            <value>
                <fullName>EVS_Sales_Starter_2_Monthly</fullName>
            </value>
            <value>
                <fullName>EVS_Sales_Starter_1_Annual</fullName>
            </value>
            <value>
                <fullName>EVS_Sales_Starter_2_Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>