unpackaged/main/default/objects/Brightcove_Account__c/fields/Account_Profile__c.field-meta.xml
<CustomField>
    <fullName>Account_Profile__c</fullName>
    <label>Account Profile</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Solution Partner</fullName>
            </value>
            <value>
                <fullName>Technology Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>