unpackaged/main/default/objects/Brightcove_Account__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <label>Email Address</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>