unpackaged/main/default/objects/Brightcove_Account__c/fields/Trial_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Expiration_Date__c</fullName>
    <defaultValue>DATEVALUE($System.OriginDateTime)  + 30</defaultValue>
    <label>Trial Expiration Date</label>
    <type>Date</type>
</CustomField>